fixing some spacing issue

--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -218,5 +218,5 @@
   width: 100%;
   background-size: 100%;
   background-color: rgba(0, 0,0, .1);
-  height: 140px;
+  height: 10%;
 }
